feat: add license

--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -18,7 +18,8 @@
   ],
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "author": "robbe luo <robbe.luo@gmail.com>",
   "main": "dist/index.js",
